adding basic html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <script src="krypter.js" defer></script>
 </head>
 <body>
-    
+    <section class="headerSection">
+    <h2 id="mainHeader">Kryptering Master</h2>
+    </section>
+    <section class="outputSection">
+    <h4 id="textOutput">>>Output<<</h4>
+    </section>
+
+    <section class="inputs">
+        <label for="melding">Melding</label>
+        <input type="text" id="meldingInput" name="melding">
+        <label for="key">Krypterings Key</label>
+        <input type="number" id="krypteringsKey" name="key">
+        <button id="krypterKnapp">Krypter</button>
+        <button id="dekrypterKnapp">Dekrypter</button>
+    </section>
 </body>
 </html>
