adding background img

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <title>Kryptering Master</title>
     <link rel="stylesheet" href="styles.css">
     <script src="krypter.js" defer></script>
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon.png">
 </head>
 <body>
+    <section id="background">
+        <img src="./img/bakgrunn.png" alt="bakgrunn" id="backgroundIMG">
+    </section>
     <section class="headerSection">
     <h2 id="mainHeader">Kryptering Master</h2>
     </section>
